; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_win32.c_handle_WM_RBUTTONUP.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_win32.c_handle_WM_RBUTTONUP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_mousex = common dso_local global i64 0, align 8
@g_mousey = common dso_local global i64 0, align 8
@g_xscroll = common dso_local global i64 0, align 8
@g_yscroll = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @handle_WM_RBUTTONUP to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_WM_RBUTTONUP(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @LOWORD(i32 %9)
  store i64 %10, i64* @g_mousex, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i64 @HIWORD(i32 %11)
  store i64 %12, i64* @g_mousey, align 8
  %13 = load i64, i64* @g_mousex, align 8
  %14 = load i64, i64* @g_xscroll, align 8
  %15 = add nsw i64 %13, %14
  %16 = load i64, i64* @g_mousey, align 8
  %17 = load i64, i64* @g_yscroll, align 8
  %18 = add nsw i64 %16, %17
  %19 = call i32 @ui_mouse_button(i32 2, i64 %15, i64 %18, i32 0)
  ret i32 0
}

declare dso_local i64 @LOWORD(i32) #1

declare dso_local i64 @HIWORD(i32) #1

declare dso_local i32 @ui_mouse_button(i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
